[2021.06.09]  스프링 MVC 1편 - 요청과 응답 Servlet

--- a/servlet/build.gradle
+++ b/servlet/build.gradle
@@ -22,9 +22,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'junit:junit:4.12'
-	implementation 'junit:junit:4.12'
+
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
