--- a/backendTech/src/main/resources/application.properties
+++ b/backendTech/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port = 8011
 
 spring.messages.basename=messages, errors
+
+# \uD2B8\uB798\uD0B9 \uBAA8\uB4DC \uC885\uB8CC
+server.servlet.session.tracking-modes=cookie
+#server.servlet.session.timeout=60  # \uAE30\uBCF8\uC740 1800
